{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 345,
  "lineage": "2c2bbe22-0674-012d-1a06-2fd080180404",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:subnet/subnet-0d196beb5d59735f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.222.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d196beb5d59735f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "480936841767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "interface-test-public-001/az1",
              "Owner": "mark",
              "Project": "interface_test",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "interface-test-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-061d391c2c51349fc"
          }
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to communicate to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-3095269030",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f27555639d41a8cd",
            "self": false,
            "source_security_group_id": "sg-036691aa0243bcbaa",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-4193878908",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f27555639d41a8cd",
            "self": false,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:security-group/sg-0589b758f9c6b20eb",
            "description": "Security Group for EKS Control Plane.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow control plane to ephemrally communicate with nodes.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-036691aa0243bcbaa"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane to ephemrally communicate with pods.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f9327f92d82416e"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0589b758f9c6b20eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.222.0.0/16"
                ],
                "description": "Allow CIDRs to communicate with the cluster API server.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with the cluster API server.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-036691aa0243bcbaa"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API server.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f9327f92d82416e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-interface-test-control-plane",
            "name_prefix": "",
            "owner_id": "480936841767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-interface-test-control-plane",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-interface-test-control-plane",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-061d391c2c51349fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ephemeral/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow control plane to ephemrally communicate with nodes.",
            "from_port": 1025,
            "id": "sgrule-2623075129",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-036691aa0243bcbaa",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow control plane to ephemrally communicate with pods.",
            "from_port": 1025,
            "id": "sgrule-3722411747",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cluster-api/cidrs",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.222.0.0/16"
            ],
            "description": "Allow CIDRs to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-3876165693",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-2888194624",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-036691aa0243bcbaa",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-3986806682",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:security-group/sg-036691aa0243bcbaa",
            "description": "Security Group for all nodes in the EKS cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes egress access to the cluster security group(for fargate pods).",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f27555639d41a8cd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036691aa0243bcbaa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate each others.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate from the cluster security group(for fargate pods).",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f27555639d41a8cd"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to receive communication from the cluster control plane for kubelet.",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0589b758f9c6b20eb"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0589b758f9c6b20eb"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to receive communication from the pods for kubelet.",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f9327f92d82416e"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to receive communication from the pods for node-exporter.",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f9327f92d82416e"
                ],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "eks-interface-test-node",
            "name_prefix": "",
            "owner_id": "480936841767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-interface-test-node",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-interface-test-node",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-061d391c2c51349fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-490390111",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes egress access to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-2952375848",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": false,
            "source_security_group_id": "sg-0f27555639d41a8cd",
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to communicate from the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-3693642857",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": false,
            "source_security_group_id": "sg-0f27555639d41a8cd",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/self",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to communicate each others.",
            "from_port": 0,
            "id": "sgrule-873786753",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": true,
            "source_security_group_id": "sg-036691aa0243bcbaa",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1384888698",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": false,
            "source_security_group_id": "sg-0589b758f9c6b20eb",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "kubelet/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to receive communication from the cluster control plane for kubelet.",
            "from_port": 10250,
            "id": "sgrule-491748884",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": false,
            "source_security_group_id": "sg-0589b758f9c6b20eb",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "kubelet/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to receive communication from the pods for kubelet.",
            "from_port": 10250,
            "id": "sgrule-1663648859",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": false,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "node-exporter/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to receive communication from the pods for node-exporter.",
            "from_port": 9100,
            "id": "sgrule-3123169925",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-036691aa0243bcbaa",
            "self": false,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:security-group/sg-07f9327f92d82416e",
            "description": "Security Group for all pods in the EKS cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow pods to communicate to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f9327f92d82416e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate each others.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate from the cluster security group(for fargate pods).",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f27555639d41a8cd"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate from the nodes.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-036691aa0243bcbaa"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0589b758f9c6b20eb"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to receive metrics-server communication from the cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0589b758f9c6b20eb"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-interface-test-pod",
            "name_prefix": "",
            "owner_id": "480936841767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-interface-test-pod",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-interface-test-pod",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-061d391c2c51349fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow pods to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-3820761083",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f9327f92d82416e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate from the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-1215218157",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f9327f92d82416e",
            "self": false,
            "source_security_group_id": "sg-0f27555639d41a8cd",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate from the nodes.",
            "from_port": 0,
            "id": "sgrule-2689771525",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f9327f92d82416e",
            "self": false,
            "source_security_group_id": "sg-036691aa0243bcbaa",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/self",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate each others.",
            "from_port": 0,
            "id": "sgrule-3788842463",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f9327f92d82416e",
            "self": true,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2458401949",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f9327f92d82416e",
            "self": false,
            "source_security_group_id": "sg-0589b758f9c6b20eb",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "metrics-server/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to receive metrics-server communication from the cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2241018933",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f9327f92d82416e",
            "self": false,
            "source_security_group_id": "sg-0589b758f9c6b20eb",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:security-group/sg-003b03756fa8f775f",
            "description": "Security group for EKS nodes.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes to communicate to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003b03756fa8f775f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.222.0.0/16"
                ],
                "description": "Allow CIDRs to communicate with MySQL Server.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "interface-test-node-user",
            "name_prefix": "",
            "owner_id": "480936841767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "interface-test-node-user",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "interface-test-node-user",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "interface-test-node-user",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "interface-test-node-user",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-061d391c2c51349fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-1219934994",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-003b03756fa8f775f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ssh/cidrs",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.222.0.0/16"
            ],
            "description": "Allow CIDRs to communicate with MySQL Server.",
            "from_port": 22,
            "id": "sgrule-4174569420",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003b03756fa8f775f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}